plugins {
    id 'java'
    id 'idea'
    id 'scala'
    id 'application'
    id 'com.github.johnrengelman.shadow' version '1.2.4'
}

group 'com.khronodragon'
version '1.0-SNAPSHOT'

sourceCompatibility = 1.8
archivesBaseName = 'bluestone'
mainClassName = 'com.khronodragon.bluestone.Start'

repositories {
    mavenCentral()
    jcenter()
}

task fatJar(type: Jar) {
    manifest {
        attributes 'Implementation-Title': 'Bluestone',
                'Implementation-Version': version,
                'Main-Class': 'com.khronodragon.bluestone.Start'
    }
    baseName = project.name + '-all'
    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
    with jar
}

dependencies {
    compile 'org.scala-lang:scala-library:2.12.2'
    compile 'net.dv8tion:JDA:3.1.1_210'
    compile 'com.google.code.gson:gson:2.8.0'
    compile 'com.sedmelluq:lavaplayer:1.2.36'
    compile 'com.mashape.unirest:unirest-java:1.4.9'
    compile 'com.google.guava:guava:22.0'
}

tasks.withType(ScalaCompile) {
    configure(scalaCompileOptions.forkOptions) {
        memoryMaximumSize = '1G'
        jvmArgs = ['-XX:MaxPermSize=512M']
    }
}

compileJava.options.encoding = 'UTF-8'
compileScala.options.encoding = 'UTF-8'
